# pulseTrader

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  clang-format.txt  run.ps1  run.sh  trading.toml.example  vcpkg.json
.claude/: project-memory-archive.md  project-memory.md
apps/: CMakeLists.txt
apps/pulsetrader/: CMakeLists.txt  main.cpp
cmake/: compiler_flags.cmake
docs/: OPERATIONAL_GUIDE.md  analysis-webui-kline-not-showing.md  architecture-review-2026-06-20.md  architecture.md  highLevelArchitecture.md  howItWorks.md  how_it_works.md  implementation-roadmap.md  kline-bug-analysis-2026-06-21.md
src/ai/: AIClient.cpp  AIClient.hpp  AiPipeline.cpp  AiPipeline.hpp  AnalysisResult.hpp  CMakeLists.txt  NewsFeed.cpp  NewsFeed.hpp  ParamAdvisor.cpp  ParamAdvisor.hpp  PromptBuilder.cpp  PromptBuilder.hpp  TwitterFeed.cpp  ai_client.cpp  ai_client.hpp  ai_pipeline.cpp  ai_pipeline.hpp  analysis_result.hpp  news_feed.cpp  news_feed.hpp  param_advisor.cpp  param_advisor.hpp  prompt_builder.cpp  prompt_builder.hpp  twitter_feed.cpp  twitter_feed.hpp
src/core/: CMakeLists.txt  config.hpp  config_loader.cpp  config_loader.hpp  config_validator.cpp  config_validator.hpp  error.hpp  types.hpp
src/exchange/: CMakeLists.txt  EndpointRouter.cpp  EndpointRouter.hpp  GateRestClient.cpp  GateRestClient.hpp  GateWsChannels.cpp  GateWsClient.cpp  GateWsClient.hpp  ProxyTunnel.cpp  ProxyTunnel.hpp  endpoint_router.cpp  endpoint_router.hpp  gate_auth.cpp  gate_auth.hpp  gate_rest_client.cpp  gate_rest_client.hpp  gate_ws_channels.cpp  gate_ws_channels.hpp  gate_ws_client.cpp  gate_ws_client.hpp  proxy_tunnel.cpp  proxy_tunnel.hpp
src/execution/: CMakeLists.txt  ExecutionReport.cpp  OrderExecutor.cpp  OrderExecutor.hpp  OrderTracker.cpp  OrderTracker.hpp  execution_report.cpp  execution_report.hpp  order_executor.cpp  order_executor.hpp  order_tracker.cpp  order_tracker.hpp
src/heartbeat/: CMakeLists.txt  HeartbeatScheduler.cpp  HeartbeatScheduler.hpp  TaskQueue.cpp  TaskQueue.hpp  heartbeat_events.hpp  heartbeat_scheduler.cpp  heartbeat_scheduler.hpp  task_queue.cpp  task_queue.hpp
src/logging/: CMakeLists.txt  Logger.cpp  Logger.hpp  logger.cpp  logger.hpp
src/market/: CMakeLists.txt  KlineBuffer.cpp  KlineBuffer.hpp  MarketFeed.cpp  MarketFeed.hpp  OrderBookManager.cpp  SymbolRegistry.cpp  SymbolRegistry.hpp  TickerCache.cpp  TickerCache.hpp  kline_buffer.cpp  kline_buffer.hpp  market_feed.cpp  market_feed.hpp  orderbook_manager.cpp  orderbook_manager.hpp  symbol_registry.cpp  symbol_registry.hpp  ticker_cache.cpp  ticker_cache.hpp
src/risk/: CMakeLists.txt  DrawdownGuard.cpp  DrawdownGuard.hpp  OrderRateLimiter.cpp  OrderRateLimiter.hpp  PositionManager.cpp  PositionManager.hpp  RiskManager.cpp  RiskManager.hpp  StopLossEngine.cpp  StopLossEngine.hpp  TakeProfitEngine.cpp  drawdown_guard.cpp  drawdown_guard.hpp  order_rate_limiter.cpp  order_rate_limiter.hpp  position_manager.cpp  position_manager.hpp  risk_manager.cpp  risk_manager.hpp  risk_types.hpp  stop_loss_engine.cpp  stop_loss_engine.hpp  take_profit_engine.cpp  take_profit_engine.hpp
src/strategy/: CMakeLists.txt  StrategyBase.hpp  StrategyContext.hpp  StrategyManager.cpp  StrategyManager.hpp  StrategyParams.hpp  signal_types.hpp  strategy_base.hpp  strategy_context.hpp  strategy_manager.cpp  strategy_manager.hpp
src/strategy/scalping/: MeanReversionScalper.cpp  MeanReversionScalper.hpp  MomentumScalper.cpp  MomentumScalper.hpp  OrderBookScalper.cpp  OrderBookScalper.hpp  SuperTrendScalper.cpp  SuperTrendScalper.hpp  mean_reversion_scalper.cpp  mean_reversion_scalper.hpp  momentum_scalper.cpp  momentum_scalper.hpp  orderbook_scalper.cpp  orderbook_scalper.hpp  supertrend_scalper.cpp  supertrend_scalper.hpp
src/strategy/signal/: SignalAggregator.cpp  SignalAggregator.hpp  signal_aggregator.cpp  signal_aggregator.hpp
src/trade_recorder/: CMakeLists.txt  TradeRecord.hpp  TradeRecorder.cpp  TradeRecorder.hpp  trade_record.hpp  trade_recorder.cpp  trade_recorder.hpp
src/webui/: CMakeLists.txt  DashboardState.cpp  DashboardState.hpp  WebServer.cpp  WebServer.hpp  WsServer.cpp  WsServer.hpp  dashboard_state.cpp  dashboard_state.hpp  snapshot_types.hpp  web_server.cpp  web_server.hpp  ws_server.cpp  ws_server.hpp
tests/unit/: CMakeLists.txt
tests/unit/ai/: CMakeLists.txt  test_ai_client.cpp  test_ai_pipeline.cpp  test_analysis_result.cpp  test_param_advisor.cpp  test_prompt_builder.cpp
tests/unit/core/: CMakeLists.txt  testTypes.cpp  test_config_loader.cpp  test_config_validator.cpp  test_types.cpp
tests/unit/exchange/: CMakeLists.txt  test_endpoint_router.cpp  test_gate_auth.cpp  test_gate_ws_channels.cpp  test_gate_ws_client.cpp  test_proxy_tunnel.cpp
tests/unit/execution/: CMakeLists.txt  test_execution_report.cpp  test_order_executor.cpp  test_order_tracker.cpp
tests/unit/heartbeat/: CMakeLists.txt  test_heartbeat_scheduler.cpp  test_task_queue.cpp
tests/unit/logging/: CMakeLists.txt  testLogger.cpp
tests/unit/market/: CMakeLists.txt  test_kline_buffer.cpp  test_market_feed_stats.cpp  test_orderbook_manager.cpp  test_symbol_registry.cpp  test_ticker_cache.cpp
tests/unit/risk/: CMakeLists.txt  test_drawdown_guard.cpp  test_order_rate_limiter.cpp  test_position_manager.cpp  test_risk_manager.cpp  test_stop_loss_engine.cpp  test_take_profit_engine.cpp
tests/unit/strategy/: CMakeLists.txt  test_mean_reversion_scalper.cpp  test_momentum_scalper.cpp  test_orderbook_scalper.cpp  test_signal_aggregator.cpp  test_signal_types.cpp  test_strategy_base.cpp  test_strategy_manager.cpp  test_strategy_params.cpp  test_supertrend_scalper.cpp
tests/unit/trade_recorder/: CMakeLists.txt  test_trade_queries.cpp  test_trade_recorder.cpp
tests/unit/webui/: CMakeLists.txt  test_dashboard_state.cpp  test_snapshot_types.cpp  test_web_server.cpp  test_ws_server.cpp
tools/: CMakeLists.txt  diagramGen.hpp  diagram_gen.hpp  test_ai_pipeline.cpp  test_balance_diag.cpp  test_execution.cpp  test_gate_rest.cpp  test_gate_ws.cpp  test_market_feed.cpp  test_strategy.cpp  test_webui.cpp
(+76 files in other folders)
